--- a/views/index.html
+++ b/views/index.html
@@ -11,9 +11,9 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Insert app CSS -->
-
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <link rel="stylesheet" href="css/vendor.css">
+        <link rel="stylesheet" href="css/main.css">
+        <script src="js/head.js"></script>
     </head>
 
     <body>
@@ -23,10 +23,7 @@
 
         <div id="hawk-app"></div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
-        <!-- Insert app JS -->
-        <script src="js/bundle.js"></script>
+        <script src="js/vendor.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
