Record stats like new artists and new releases when updating the Hawk database, and send them in the notification and store them in MongoDB. Also added some better error handling and recovery and checks around when to update the Postgres database. Did a bit of really basic UI stuff, added a grid and a search box and fixed SCSS live re-compiling.

--- a/views/index.html
+++ b/views/index.html
@@ -21,6 +21,35 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+        <div class="contain-to-grid">
+	        <nav class="top-bar" data-topbar role="navigation">
+	            <ul class="title-area">
+	                <li class="name">
+	                    <h1><a href="#">Hawk</a></h1>
+	                </li>
+	                <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+	                <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+	            </ul>
+
+	            <section class="top-bar-section">
+	                <!-- Right Nav Section -->
+	                <ul class="right">
+	                    <li class="has-dropdown">
+	                        <a href="#">Right Button Dropdown</a>
+	                        <ul class="dropdown">
+	                            <li><a href="#">First link in dropdown</a></li>
+	                            <li class="active"><a href="#">Active link in dropdown</a></li>
+	                        </ul>
+	                    </li>
+	                </ul>
+
+	                <!-- Left Nav Section -->
+	                <ul class="left">
+	                </ul>
+	            </section>
+	        </nav>
+        </div>
+
         <div id="hawk-app"></div>
 
         <script src="js/vendor.js"></script>
