--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,500' rel='stylesheet' type='text/css'>
+
         <!--<link rel="stylesheet" href="css/vendor.css">-->
         <link rel="stylesheet" href="css/main.css">
         <script src="js/head.js"></script>
@@ -21,36 +23,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="contain-to-grid">
-	        <nav class="top-bar" data-topbar role="navigation">
-	            <ul class="title-area">
-	                <li class="name">
-	                    <h1><a href="#">Hawk</a></h1>
-	                </li>
-	                <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-	                <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-	            </ul>
-
-	            <section class="top-bar-section">
-	                <!-- Right Nav Section -->
-	                <ul class="right">
-	                    <li class="has-dropdown">
-	                        <a href="#">Right Button Dropdown</a>
-	                        <ul class="dropdown">
-	                            <li><a href="#">First link in dropdown</a></li>
-	                            <li class="active"><a href="#">Active link in dropdown</a></li>
-	                        </ul>
-	                    </li>
-	                </ul>
-
-	                <!-- Left Nav Section -->
-	                <ul class="left">
-	                </ul>
-	            </section>
-	        </nav>
-        </div>
-
-        <div id="hawk-app"></div>
+        <div id="hawk-app">{{html}}</div>
 
         <script src="js/vendor.js"></script>
         <script src="js/app.js"></script>
