Refactor isomorphic routing to get rid of repeated route definitions

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,7 +14,7 @@
     background: none;
     border: none;
     border-bottom: 1px solid $gainsboro;
-    font-weight: $font-weight-thin;
+    font-weight: $font-weight-normal;
 
     @include input-placeholder {
       color: $placeholder-color;
