--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div id="hawk-app">{{{html}}}</div>
+        <div id="hawk">{{{html}}}</div>
 
         <script src="js/vendor.js"></script>
         <script src="js/app.js"></script>
