--- a/views/index.html
+++ b/views/index.html
@@ -25,6 +25,7 @@
 
         <div id="hawk">{{{html}}}</div>
 
+        <script id="props" type="application/json">{{{props}}}</script>
         <script src="js/vendor.js"></script>
         <script src="js/app.js"></script>
     </body>
