--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,9 +13,9 @@
 
         <link href='http://fonts.googleapis.com/css?family=Roboto:100,500' rel='stylesheet' type='text/css'>
 
-        <!--<link rel="stylesheet" href="css/vendor.css">-->
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/head.js"></script>
+        <!--<link rel="stylesheet" href="/css/vendor.css">-->
+        <link rel="stylesheet" href="/css/main.css">
+        <script src="/js/head.js"></script>
     </head>
 
     <body>
@@ -26,7 +26,7 @@
         <div id="hawk">{{{html}}}</div>
 
         <script id="props" type="application/json">{{{props}}}</script>
-        <script src="js/vendor.js"></script>
-        <script src="js/app.js"></script>
+        <script src="/js/vendor.js"></script>
+        <script src="/js/app.js"></script>
     </body>
 </html>
