--- a/src/styles/_foundation_settings.scss
+++ b/src/styles/_foundation_settings.scss
@@ -52,7 +52,7 @@
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // This is the default html and body font-size for the base rem value.
-// $rem-base: 16px;
+$rem-base: 16px;
 
 // Allows the use of rem-calc() or lower-bound() in your settings
 @import "foundation/functions";
@@ -63,7 +63,7 @@
 // Since the typical default browser font-size is 16px, that makes the calculation for grid size.
 // If you want your base font-size to be different and not have it affect the grid breakpoints,
 // set $rem-base to $base-font-size and make sure $base-font-size is a px value.
-// $base-font-size: 100%;
+$base-font-size: 100%;
 
 // The $base-font-size is 100% while $base-line-height is 150%
 // $base-line-height: 150%;
@@ -95,7 +95,7 @@ $font-family-sans-serif: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 // We use these to define default font weights
 $font-weight-normal: 100;
-$font-weight-bold: 500;
+$font-weight-bold: 300;
 
 $white       : #FFFFFF;
 $ghost       : #FAFAFA;
@@ -1420,16 +1420,16 @@ $topbar-title-weight: $font-weight-bold;
 $topbar-title-font-size: rem-calc(18);
 
 // Set the link colors and styles for top-level nav
-$topbar-link-color: $jet;
+$topbar-link-color: $charcoal;
 $topbar-link-color-hover: $primary-color-dark;
 $topbar-link-color-active: $primary-color-dark;
 $topbar-link-color-active-hover: $primary-color-dark;
-$topbar-link-weight: $font-weight-normal;
+$topbar-link-weight: $font-weight-bold;
 $topbar-link-font-size: rem-calc(16);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
 $topbar-link-bg: $topbar-bg;
 $topbar-link-bg-hover: scale-color($topbar-link-bg, $lightness: 0%);
-$topbar-link-bg-color-hover: $jet;
+$topbar-link-bg-color-hover: $charcoal;
 $topbar-link-bg-active: $topbar-link-bg;
 $topbar-link-bg-active-hover: $topbar-link-bg;
 // $topbar-link-font-family: $body-font-family;
@@ -1442,13 +1442,13 @@ $topbar-link-bg-active-hover: $topbar-link-bg;
 
 // Style the top bar dropdown elements
 $topbar-dropdown-bg: $white-smoke;
-$topbar-dropdown-link-color: $jet;
+$topbar-dropdown-link-color: $charcoal;
 $topbar-dropdown-link-color-hover: $primary-color-dark;
 $topbar-dropdown-link-bg: $ghost;
 $topbar-dropdown-link-bg-hover: $ghost;
-// $topbar-dropdown-link-weight: $font-weight-normal;
+$topbar-dropdown-link-weight: $font-weight-bold;
 // $topbar-dropdown-toggle-size: 5px;
-$topbar-dropdown-toggle-color: $jet;
+$topbar-dropdown-toggle-color: $charcoal;
 // $topbar-dropdown-toggle-alpha: 0.4;
 
 // $topbar-dropdown-label-color: $monsoon;
