--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,13 +18,25 @@
 .nav-wrapper {
   border-bottom: 1px solid $gainsboro;
 
+  .top-bar li.name {
+    padding-left: 24px;
+    background-image: url(../img/hawk.png);
+    background-position: left 8px;
+    background-repeat: no-repeat; 
+    background-size: 32px;
+  }
+
   .top-bar li.name a {
     color: $primary-color-dark;
   }
 
+  .top-bar-section ul li > a {
+    transition: color 0.2s ease 0s;
+  }
+
   @media #{$medium-up} {
     .top-bar {
-      padding: 0 1rem 0 0;
+      padding: 0 1rem;
     }
 
     .top-bar-section ul.dropdown {
@@ -102,7 +114,7 @@ span.primary {
   position: relative;
   padding: $topbar-height 0;
   // http://sixrevisions.com/css/responsive-background-image/
-  background-image: url(/img/northern_hawk_finland-wide.jpg), url(/img/northern_hawk_finland-small.jpg);
+  background-image: url(../img/northern_hawk_finland-wide.jpg), url(../img/northern_hawk_finland-small.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -152,9 +164,9 @@ span.primary {
   padding-top: 1rem;
 }
 
-/***** Track an Artist Page *****/
+/***** Watch an Artist Page *****/
 
-.track {
+.watch {
   padding-top: 1rem;
 
   @mixin big-input {
@@ -191,6 +203,7 @@ span.primary {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    float: left;
   }
 
   .artist {
@@ -242,6 +255,32 @@ span.primary {
       margin-top: -35px;
   }
 
+  .artist.active h4 {
+    color: $primary-color-dark;
+  }
+
+  .artist .button.ghost,
+  .artist .button.ghost:hover
+  .artist .button.ghost:focus {
+    line-height: 26px;
+    background: none;
+    margin: 20px 1rem 20px 0;
+    color: $pinkrose-dark;
+    border: 1px solid $pinkrose-dark;
+    font-size: 0.8rem;
+    padding: 0 0.8rem;
+    transition: all 0.2s ease 0s;
+    float: right;
+  }
+
+  .artist .button.ghost:hover,
+  .artist .button.ghost.watching,
+  .artist .button.ghost.watching:hover,
+  .artist .button.ghost.watching:focus {
+    color: $ghost;
+    background-color: $pinkrose-light;
+  }
+
   .release-list {
     margin: 2rem 0;
     padding-left: 3rem;
@@ -251,11 +290,15 @@ span.primary {
     margin-bottom: 1rem;
   }
 
+  .release h6 {
+    color: $charcoal;
+  }
+
   .cover-image {
     width: 100%;
     height: 0;
     padding-bottom: 100%;
-    background-image: url(/img/no_cover.jpg);
+    background-image: url(../img/no_cover.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
