--- a/src/views/index.html
+++ b/src/views/index.html
@@ -11,7 +11,12 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link href='http://fonts.googleapis.com/css?family=Roboto:100,500' rel='stylesheet' type='text/css'>
+        <!-- Icons -->
+        <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
+        <link rel="apple-touch-icon" href="/img/favicon.png">
+
+        <!-- Fonts -->
+        <link href='http://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
 
         <!--<link rel="stylesheet" href="/css/vendor.css">-->
         <link rel="stylesheet" href="/css/main.css">
