--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -312,9 +312,11 @@ span.primary {
     width: 100%;
     height: 0;
     padding-bottom: 100%;
-    background-image: url(../img/no_cover.jpg);
+    border: 1px solid $gainsboro;
+    background-color: $white-smoke;
+    background-image: url(../img/cd.png);
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 95%;
   }
 }
