--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -274,12 +274,9 @@ span.primary {
   }
 
   .artist .button.ghost,
-  .artist .button.ghost:hover
-  .artist .button.ghost:focus {
+  .artist .button.ghost:hover {
     line-height: 26px;
-    background: none;
     margin: 20px 1rem 20px 0;
-    color: $pinkrose-dark;
     border: 1px solid $pinkrose-dark;
     font-size: 0.8rem;
     padding: 0 0.8rem;
@@ -287,10 +284,14 @@ span.primary {
     float: right;
   }
 
+  .artist .button.ghost,
+  .artist .button.ghost.watching:hover {
+    background: none;
+    color: $pinkrose-dark;
+  }
+
   .artist .button.ghost:hover,
-  .artist .button.ghost.watching,
-  .artist .button.ghost.watching:hover,
-  .artist .button.ghost.watching:focus {
+  .artist .button.ghost.watching {
     color: $ghost;
     background-color: $pinkrose-light;
   }
