--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -215,7 +215,6 @@ span.primary {
     position: relative;
     background: none;
     list-style: none;
-    padding-left: 1rem;
     border: 1px solid $body-bg;
     border-right: 1px solid $gainsboro;
   }
@@ -276,12 +275,18 @@ span.primary {
   .artist .button.ghost,
   .artist .button.ghost:hover {
     line-height: 26px;
-    margin: 20px 1rem 20px 0;
+    margin: 20px 0;
     border: 1px solid $pinkrose-dark;
-    font-size: 0.8rem;
-    padding: 0 0.8rem;
+    font-size: 0.6rem;
+    padding: 0;
     transition: all 0.2s ease 0s;
-    float: right;
+    white-space: nowrap;
+    width: 90%;
+
+    @media #{$medium-up} {
+      padding: 0 0.4rem;
+      font-size: 0.8rem;
+    }
   }
 
   .artist .button.ghost,
@@ -297,16 +302,24 @@ span.primary {
   }
 
   .release-list {
-    margin: 24px 0;
-    padding-left: 3rem;
+    padding-left: 2rem;
   }
 
   .release {
     margin-bottom: 1rem;
   }
 
+  .release h5 {
+    @media #{$small-only} {
+      font-size: 1.0rem;
+    }
+  }
+
   .release h6 {
     color: $charcoal;
+    @media #{$small-only} {
+      font-size: 0.8rem;
+    }
   }
 
   .cover-image {
