--- a/src/views/index.html
+++ b/src/views/index.html
@@ -30,7 +30,7 @@
 
         <div id="hawk">{{{html}}}</div>
 
-        <script id="props" type="application/json">{{{props}}}</script>
+        <script id="props" type="application/json">{{{_props}}}</script>
         <script src="/js/vendor.js"></script>
         <script src="/js/app.js"></script>
     </body>
