--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -107,6 +107,18 @@ span.primary {
   color: $primary-color-dark;
 }
 
+.cover-image {
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  border: 1px solid $gainsboro;
+  background-color: $white-smoke;
+  background-image: url(../img/cd.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 95%;
+}
+
 /***** Home Page *****/
 
 .home {
@@ -161,8 +173,25 @@ span.primary {
 /***** Release Feed Page *****/
 
 .feed {
-  padding-top: 1rem;
+  padding: 1rem 0;
+
+  ul {
+    margin: 0;
+  }
+
+  .feed-item {
+    margin: 1rem 0;
+  }
+
+  h4 {
+    color: $primary-color-dark;
+  }
+
+  h6 {
+    color: $charcoal;
+  }
 }
+
 
 /***** Watch an Artist Page *****/
 
@@ -299,6 +328,7 @@ span.primary {
   .artist .button.ghost.watching {
     color: $ghost;
     background-color: $pinkrose-light;
+    transition: all 0.2s ease 0s;
   }
 
   .release-list {
@@ -321,16 +351,6 @@ span.primary {
       font-size: 0.8rem;
     }
   }
-
-  .cover-image {
-    width: 100%;
-    height: 0;
-    padding-bottom: 100%;
-    border: 1px solid $gainsboro;
-    background-color: $white-smoke;
-    background-image: url(../img/cd.png);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 95%;
-  }
 }
+
+
