--- a/src/styles/_foundation_settings.scss
+++ b/src/styles/_foundation_settings.scss
@@ -662,16 +662,16 @@ $form-spacing: rem-calc(13);
 // $input-font-family: inherit;
 // $input-font-color: rgba(0,0,0,0.75);
 $input-font-size: rem-calc(13);
-// $input-bg-color: $white;
-// $input-focus-bg-color: scale-color($white, $lightness: -2%);
-// $input-border-color: scale-color($white, $lightness: -20%);
-// $input-focus-border-color: scale-color($white, $lightness: -40%);
+$input-bg-color: $white;
+$input-focus-bg-color: $input-bg-color;
+$input-border-color: $iron;
+$input-focus-border-color: $primary-color-dark;
 // $input-border-style: solid;
 // $input-border-width: 1px;
 // $input-border-radius: $global-radius;
 // $input-disabled-bg: $gainsboro;
 // $input-disabled-cursor: $cursor-default-value;
-// $input-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+$input-box-shadow: none;
 // $input-include-glowing-effect: true;
 
 // We use these to style the fieldset border and spacing.
