Upgrade deps, use eslint instead of jshint, and fix some style issues

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -46,12 +46,12 @@
       background: $ghost;
       border: 1px solid $iron;
       border-radius: $global-radius;
-      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.176);
+      box-shadow: 0 2px 12px rgba(0, 0, 0, .176);
     } 
 
     .top-bar-section ul.dropdown:after, 
     .top-bar-section ul.dropdown:before { 
-      bottom: 100%; 
+      bottom: 100%;
       right: 0%;
       border: solid transparent;
       content: " ";
@@ -61,16 +61,16 @@
       pointer-events: none;
     } 
 
-    .top-bar-section ul.dropdown:after { 
+    .top-bar-section ul.dropdown:after {
       border-color: rgba(250, 250, 250, 0);
       border-bottom-color: $ghost;
       border-width: 6px;
       margin-right: 14px;
     } 
 
-    .top-bar-section ul.dropdown:before { 
+    .top-bar-section ul.dropdown:before {
       border-color: rgba(204, 204, 204, 0);
-      border-bottom-color: $iron; 
+      border-bottom-color: $iron;
       border-width: 7px;
       margin-right: 13px;
     }
@@ -144,7 +144,7 @@ span.primary {
 
   input {
     @include input-placeholder {
-      font-weight: $font-weight-normal;
+      font-weight: $font-weight-bold;
     }
   }
 
@@ -160,7 +160,7 @@ span.primary {
 }
 
 @mixin ghost-block {
-  background-color: rgba($ghost, 0.9);
+  background-color: rgba($ghost, .9);
   padding: 1rem;
   margin-bottom: 1rem;
 }
@@ -231,7 +231,7 @@ span.primary {
   @mixin big-input {
     font-size: 2rem;
     background: none;
-    border: none;
+    border: 0;
     border-bottom: 1px solid $gainsboro;
     font-weight: $font-weight-normal;
 
@@ -290,7 +290,7 @@ span.primary {
 
   .artist.active {
     position: relative;
-    background: #F5F5F5;
+    background: $white-smoke;
     border: 1px solid $gainsboro;
     border-left: 1px solid $body-bg;
   }
@@ -309,7 +309,7 @@ span.primary {
 
   .artist.active:after {
     border-color: rgba(245, 245, 245, 0);
-    border-left-color: #F5F5F5;
+    border-left-color: $white-smoke;
     border-width: 34px;
     margin-top: -34px;
   }
@@ -340,15 +340,15 @@ span.primary {
     line-height: 26px;
     margin: 20px 0;
     border: 1px solid $pinkrose-dark;
-    font-size: 0.6rem;
+    font-size: .6rem;
     padding: 0;
-    transition: all 0.2s ease 0s;
+    transition: all .2s ease 0s;
     white-space: nowrap;
     width: 90%;
 
     @media #{$medium-up} {
-      padding: 0 0.4rem;
-      font-size: 0.8rem;
+      padding: 0 .4rem;
+      font-size: .8rem;
     }
   }
 
@@ -362,7 +362,7 @@ span.primary {
   .artist .button.ghost.watching {
     color: $ghost;
     background-color: $pinkrose-light;
-    transition: all 0.2s ease 0s;
+    transition: all .2s ease 0s;
   }
 
   .release-list {
@@ -375,14 +375,14 @@ span.primary {
 
   .release h5 {
     @media #{$small-only} {
-      font-size: 1.0rem;
+      font-size: 1rem;
     }
   }
 
   .release h6 {
     color: $charcoal;
     @media #{$small-only} {
-      font-size: 0.8rem;
+      font-size: .8rem;
     }
   }
 }
