Fix some SQL in the import scripts and start refactoring controllers.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,11 +23,11 @@
   border-bottom: 1px solid $gainsboro;
 
   .top-bar li.name {
-    padding-left: 24px;
-    background-image: url(../img/hawk.png);
-    background-position: left 8px;
-    background-repeat: no-repeat; 
-    background-size: 32px;
+    // padding-left: 24px;
+    // background-image: url(../img/hawk.png);
+    // background-position: left 8px;
+    // background-repeat: no-repeat; 
+    // background-size: 32px;
   }
 
   .top-bar li.name a {
