--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,37 +1,18 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-
+<html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Hawk</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Icons -->
-        <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
-        <link rel="apple-touch-icon" href="/img/favicon.png">
-
-        <!-- Fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
-
-        <!--<link rel="stylesheet" href="/css/vendor.css">-->
-        <link rel="stylesheet" href="/css/main.css">
-        <script src="/js/head.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
+        <!-- inject:css -->
+        <!-- endinject -->
     </head>
 
     <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <div id="hawk">{{{html}}}</div>
-
-        <script id="data" type="application/json">{{{_data}}}</script>
-        <script src="/js/vendor.js"></script>
-        <script src="/js/app.js"></script>
+        <div id="hawk"></div>
+        <!-- inject:js -->
+        <!-- endinject -->
     </body>
 </html>
